# vim-core-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs  build_allowlist.rs  build_artifact.rs  build_compile_plan.rs  build_link_audit.rs  build_test_runner.rs  upstream-metadata.json  upstream-test-classification.json  upstream-test-skiplist.txt  vim-source-allowlist.txt  vim-source-build-manifest.txt
.agents/skills/source-command-kiro-steering/: SKILL.md
.agents/skills/source-command-kiro-steering-custom/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release-crate.yml  upstream-tests.yml
docs/: SCOPE.md  api-contracts.md  api-index.md  internal-api-reference.md  known-limitations.md  public-api-reference.md  tree-sitter-syntax-design.md  upstream-test-classification.md
docs/adr/: 0001-embedded-mode-host-owned-event-driven.md  0002-define-compatibility-boundaries.md  0003-versioned-tree-sitter-extraction.md
native/: upstream_runtime.c  upstream_runtime.h  vim_bridge.c  vim_bridge.h  vim_bridge_vfd.c  vim_bridge_vfd.h
patches/: 0001-structured-message-categories.patch  0002-embedded-input-prompts.patch
scripts/: package-prebuilt-artifact.sh  setup-git-hooks.sh  vendor-sync.sh
skill/: vim-core-rs.skill
skill/vim-core-rs/: SKILL.md
skill/vim-core-rs/agents/: openai.yaml
skill/vim-core-rs/references/: api-contracts.md  api-index.md  api.md  architecture.md  examples.md  internal-api-reference.md  known-limitations.md  public-api-reference.md  readme-summary.md  testing.md  types.md  vfs-vfd.md
src/: debug_log.rs  lib.rs  vfd.rs  vfs.rs
tests/: build_modules_contract.rs  ex_command_contract.rs  incsearch_contract.rs  integration_contract.rs  job_api_contract.rs  job_contract.rs  jumplist_contract.rs  mark_contract.rs  message_log_contract.rs  mode_transition_contract.rs  multi_buffer_window_contract.rs  multi_buffer_window_integration.rs  normal_deletion_contract.rs  pending_input_contract.rs  public_api_contract.rs  pum_contract.rs  purification_test.rs  quality_gate_contract.rs  quit_contract.rs  register_contract.rs  rename_contract.rs  repro_e182.rs  repro_prefix_conflict.rs  runtime_path_contract.rs  scroll_viewport_contract.rs  search_highlight_c_contract.rs  search_highlight_contract.rs  sequential_dispatch_contract.rs  syntax_contract.rs  undo_contract.rs  upstream_vim_generated.rs  vfs_contract.rs  visual_selection_contract.rs  window_contract.rs
