[package]
name = "vim-core-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/shun/vim-core-rs"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"

[dev-dependencies]
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
walkdir = "2.5"
